k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-kube
  namespace: rest-api-kube
  labels:
    app: rest-api-kube
spec:
  type: ClusterIP
  selector:
    app: rest-api-kube
  ports:
    - name: http
      port: 80
      targetPort: 8000
